; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_util.c_sqlite3IsNaN.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_util.c_sqlite3IsNaN.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3IsNaN(double %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca i32, align 4
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  store double %0, double* %2, align 8
  %6 = load double, double* %2, align 8
  store volatile double %6, double* %4, align 8
  %7 = load volatile double, double* %4, align 8
  store volatile double %7, double* %5, align 8
  %8 = load volatile double, double* %4, align 8
  %9 = load volatile double, double* %5, align 8
  %10 = fcmp une double %8, %9
  %11 = zext i1 %10 to i32
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @testcase(i32 %12)
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @testcase(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
